--- a/index.html
+++ b/index.html
@@ -9,24 +9,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-<link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
+<link href="styles.854bfbf4b5c4de75fd03.bundle.css" rel="stylesheet"/></head>
 
 <body>
   <app-root>Loading...</app-root>
-  <!-- First include jquery js -->
-  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <!-- Latest compiled and minified CSS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-      crossorigin="anonymous">
-      <!-- Latest compiled and minified JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-
         <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
-<script type="text/javascript" src="inline.033880c715523f63ac6c.bundle.js"></script><script type="text/javascript" src="vendor.993ae850b26388537f1a.bundle.js"></script><script type="text/javascript" src="main.2fa49bbd982ff9b27e97.bundle.js"></script></body>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script type="text/javascript" src="inline.29522ecac7ef750ebf46.bundle.js"></script><script type="text/javascript" src="vendor.5a447f460417585ad07e.bundle.js"></script><script type="text/javascript" src="main.2a6d40febe6e31c9f4d3.bundle.js"></script></body>
 
 </html>
